--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ nav img {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
